--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <title>Vite + React</title>
+    <title>ABMS</title>
   </head>
   <body>
     <div id="root"></div>
